upgrade bulma.io and clean up website

--- a/_posts/2012-11-18-park-city.md
+++ b/_posts/2012-11-18-park-city.md
@@ -5,9 +5,15 @@ topic: Park City
 date: 2012-11-18
 ---
 <div class="content" markdown="1">
+
 Recently traveled to Park City for the first time. Despite the poor weather conditions, we still managed to climb one of the peaks. If you don’t take the opportunity to experience the bliss of nature, you’re really missing an important part of life.
 
-<figure class="image">
-    <img src="/images/park-city.png" style="width:50%">
-</figure>
+<div class="columns is-mobile is-centered">
+    <div class="column is-half">
+        <figure class="image">
+            <img src="/images/park-city.png"/>
+        </figure>
+    </div>
+</div>
+
 </div>
